:loud_sound: Add Graylog configuration

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,10 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# If using graylog, append 'graylog' to the LOG_STACK above
+GRAYLOG_HOST=127.0.0.1
+GRAYLOG_PORT=12201
+
 DB_CONNECTION=sqlite
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
