--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": "^8.2",
         "graylog2/gelf-php": "^2.0",
         "inertiajs/inertia-laravel": "^2.0",
+        "knuckleswtf/scribe": "^5.1",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/telescope": "^5.7",
