--- a/node-api/geojson-helper/package.json
+++ b/node-api/geojson-helper/package.json
@@ -2,8 +2,9 @@
   "name": "geojson-helper",
   "version": "1.0.0",
   "main": "server.js",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
